tests/integration/errors/test_struct_nested_missing_required.sn
# Error test: nested struct missing required field in inner struct

struct Point =>
    x: double
    y: double

struct Wrapper =>
    pt: Point

fn main(): void =>
    # This should fail - Point is missing required field 'y'
    var w: Wrapper = Wrapper { pt: Point { x: 1.0 } }
    print("Should not compile\n")
